// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroesComponent Layout hero list should contain hero list with link and button for deleting 1`] = `
<ul
  automation-id="heroes"
  class="heroes"
  cy-automation-id="heroes"
  pw-automation-id="heroes"
>
  <li
    automation-id="hero-item"
    cy-automation-id="hero-item"
    pw-automation-id="hero-item"
  >
    <a
      automation-id="hero-link"
      cy-automation-id="hero-link"
      pw-automation-id="hero-link"
    >
      <span
        class="badge"
      >
        12
      </span>
       Dr. Nice 
    </a>
    
    <button
      automation-id="hero-button"
      class="delete"
      cy-automation-id="hero-button"
      pw-automation-id="hero-button"
      title="delete hero"
      type="button"
    >
       x 
    </button>
  </li>
  <li
    automation-id="hero-item"
    cy-automation-id="hero-item"
    pw-automation-id="hero-item"
  >
    <a
      automation-id="hero-link"
      cy-automation-id="hero-link"
      pw-automation-id="hero-link"
    >
      <span
        class="badge"
      >
        13
      </span>
       Bombasto 
    </a>
    
    <button
      automation-id="hero-button"
      class="delete"
      cy-automation-id="hero-button"
      pw-automation-id="hero-button"
      title="delete hero"
      type="button"
    >
       x 
    </button>
  </li>
  
</ul>
`;

exports[`HeroesComponent Layout hero list should contain hero list with link and button for deleting 2`] = `
<a
  automation-id="hero-link"
  cy-automation-id="hero-link"
  pw-automation-id="hero-link"
>
  <span
    class="badge"
  >
    12
  </span>
   Dr. Nice 
</a>
`;

exports[`HeroesComponent Layout hero list should contain hero list with link and button for deleting 3`] = `
<button
  automation-id="hero-button"
  class="delete"
  cy-automation-id="hero-button"
  pw-automation-id="hero-button"
  title="delete hero"
  type="button"
>
   x 
</button>
`;

exports[`HeroesComponent Layout hero list should contain hero list with link and button for deleting 4`] = `
<a
  automation-id="hero-link"
  cy-automation-id="hero-link"
  pw-automation-id="hero-link"
>
  <span
    class="badge"
  >
    13
  </span>
   Bombasto 
</a>
`;

exports[`HeroesComponent Layout hero list should contain hero list with link and button for deleting 5`] = `
<button
  automation-id="hero-button"
  class="delete"
  cy-automation-id="hero-button"
  pw-automation-id="hero-button"
  title="delete hero"
  type="button"
>
   x 
</button>
`;

exports[`HeroesComponent Layout should contain block for creating new hero with input and add button 1`] = `
<label
  automation-id="create-label"
  cy-automation-id="create-label"
  for="new-hero"
  pw-automation-id="create-label"
>
  Hero name: 
</label>
`;

exports[`HeroesComponent Layout should contain block for creating new hero with input and add button 2`] = `
<input
  automation-id="create-input"
  cy-automation-id="create-input"
  id="new-hero"
  pw-automation-id="create-input"
/>
`;

exports[`HeroesComponent Layout should contain block for creating new hero with input and add button 3`] = `
<button
  automation-id="add-button"
  class="add-button"
  cy-automation-id="add-button"
  pw-automation-id="add-button"
  type="button"
>
   Add hero 
</button>
`;

exports[`HeroesComponent Layout should contain heading 1`] = `
<h2
  automation-id="heading"
  cy-automation-id="heading"
  pw-automation-id="heading"
>
   My Heroes

</h2>
`;
